--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja"> <!-- HTML文書の言語を日本語に設定 -->
 <head>
     <meta charset="UTF-8"> <!-- 文字エンコーディングをUTF-8に設定 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- ビューポート設定：デバイスに応じてレイアウトを調整 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>予約フォーム</title> <!-- タイトルを「予約フォーム」に設定 -->
     <style>
         body {
