--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\n${formData.dates[1]}\nメッセージ：${formData.message}`
+                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【ご来店回数】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n第二希望日\n${formData.dates[1]}\n【メッセージ】：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
