--- a/index.html
+++ b/index.html
@@ -192,6 +192,12 @@
         #repairLabel, #repairButtons {
         display: none;
         }
+    .highlight-background {
+        background-color: #f9f9d6;
+        padding: 10px;
+        border-radius: 10px;
+        margin-bottom: 15px;
+    }
     </style>
 </head>
 <body>
@@ -209,10 +215,18 @@
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button> <!-- 2回目以降来店ボタン -->
         </div>
         <div class="label">希望日時<br>（希望時間は30分単位でお願いします）</div>
-        <label for="date1">第1希望日※必須</label> <!-- 第1希望日時のラベル -->
+    <div class="highlight-background">
+        <span class="highlight-text">
+               第1希望日※必須
+        </span>
+    </div>
         <input type="datetime-local" id="date1" placeholder="タップして日時を入力"> <!-- 第1希望日時入力フィールド -->
 
-        <label for="date2">第2希望日</label> <!-- 第2希望日時のラベル -->
+    <div class="highlight-background">
+        <span class="highlight-text">
+               第2希望日※必須
+        </span>
+    </div>
         <input type="datetime-local" id="date2" placeholder="タップして日時を入力"> <!-- 第2希望日時入力フィールド -->
 
         <div class="label">メッセージ<br>（お身体のお悩みがございましたらご記載ください）</div>
