--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
             margin-bottom: 10px;
             font-weight: bold;
         }
-        .label {
-            display: block;
-            margin-bottom: 10px;
-            padding: 10px;
-            font-weight: bold;
-            background-color: #13ca5e;
-            color: white;
-            border-radius: 4px;
-            text-align: center;
-        }
+.label {
+    display: block;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-weight: bold;
+    background-color: #13ca5e;
+    color: white;
+    border-radius: 4px;
+    text-align: center;
+    margin-top: 5px; /* 上に余白を追加 */
+}
         input[type="text"], input[type="tel"], textarea {
             width: 100%;
             padding: 10px;
@@ -192,12 +193,13 @@
         #repairLabel, #repairButtons {
         display: none;
         }
-    .highlight-background {
-        background-color: #f9f9d6;
-        padding: 10px;
-        border-radius: 10px;
-        margin-bottom: 15px;
-    }
+.highlight-background {
+    background-color: #f9f9d6;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    margin-top: 10px; /* 上に余白を追加 */
+}
     </style>
 </head>
 <body>
