--- a/index.html
+++ b/index.html
@@ -216,20 +216,26 @@
             <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button> <!-- 初めて来店ボタン -->
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button> <!-- 2回目以降来店ボタン -->
         </div>
-        <div class="label">希望日時<br>（希望時間は30分単位でお願いします）</div>
-    <div class="highlight-background">
-        <span class="highlight-text">
-               第1希望日※必須
-        </span>
-    </div>
-        <input type="datetime-local" id="date1" placeholder="タップして日時を入力"> <!-- 第1希望日時入力フィールド -->
 
-    <div class="highlight-background">
-        <span class="highlight-text">
-               第2希望日※必須
-        </span>
-    </div>
-        <input type="datetime-local" id="date2" placeholder="タップして日時を入力"> <!-- 第2希望日時入力フィールド -->
+        <div class="highlight-background">
+            <span class="highlight-text">第1希望日※必須</span>
+        </div>
+
+        <!-- カスタム placeholder 表示用 -->
+        <div class="date-wrapper">
+            <span class="placeholder" id="placeholder1">タップして日時を入力</span>
+            <input type="datetime-local" id="date1" onfocus="hidePlaceholder('placeholder1')" onblur="showPlaceholder('date1', 'placeholder1')">
+        </div>
+
+        <div class="highlight-background">
+            <span class="highlight-text">第2希望日※必須</span>
+        </div>
+
+        <!-- カスタム placeholder 表示用 -->
+        <div class="date-wrapper">
+            <span class="placeholder" id="placeholder2">タップして日時を入力</span>
+            <input type="datetime-local" id="date2" onfocus="hidePlaceholder('placeholder2')" onblur="showPlaceholder('date2', 'placeholder2')">
+        </div>
 
         <div class="label">メッセージ<br>（お身体のお悩みがございましたらご記載ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -255,6 +261,19 @@
                 console.error('LIFF初期化失敗', err);
             });
         });
+
+        // プレースホルダーを非表示にする関数
+        function hidePlaceholder(placeholderId) {
+            document.getElementById(placeholderId).style.display = 'none';
+        }
+
+        // プレースホルダーを表示する関数（入力がない場合）
+        function showPlaceholder(inputId, placeholderId) {
+            const input = document.getElementById(inputId);
+            if (!input.value) {
+                document.getElementById(placeholderId).style.display = 'inline';
+            }
+        }
 
         function selectVisit(element) {
             /* 訪問回数ボタンの選択状態をリセット */
@@ -323,7 +342,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【ご来店回数】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n第二希望日\n${formData.dates[1]}\n【メッセージ】：${formData.message}`
+                text: `≪予約フォーム≫\n【お名前】：${formData.name}\n【電話番号】：${formData.phone}\n【ご来店回数】：${formData.visitCount}\n【希望日時】：\n・第一希望日\n${formData.dates[0]}\n・第二希望日\n${formData.dates[1]}\n【メッセージ】：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
