--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
         <!-- カスタム placeholder 表示用 -->
         <div class="date-wrapper">
-            <span class="placeholder" id="placeholder1">タップして日時を入力</span>
+            <span class="placeholder" id="placeholder1">タップして日時を入力⇒</span>
             <input type="datetime-local" id="date1" onfocus="hidePlaceholder('placeholder1')" onblur="showPlaceholder('date1', 'placeholder1')">
         </div>
 
