--- a/index.html
+++ b/index.html
@@ -200,6 +200,29 @@
     margin-bottom: 15px;
     margin-top: 10px; /* 上に余白を追加 */
 }
+                .datetime-placeholder {
+            position: absolute;
+            top: 50%;
+            left: 15px;
+            transform: translateY(-50%);
+            color: #aaa;
+            font-size: 16px;
+            pointer-events: none;
+            transition: all 0.3s ease;
+        }
+        .datetime-input {
+            width: 100%;
+            padding: 15px; /* サイズを大きく調整 */
+            font-size: 18px; /* フォントサイズを大きく */
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        .datetime-input:focus + .datetime-placeholder,
+        .datetime-input:not(:placeholder-shown) + .datetime-placeholder {
+            visibility: hidden;
+            opacity: 0;
+        }
     </style>
 </head>
 <body>
