--- a/index.html
+++ b/index.html
@@ -245,19 +245,21 @@
         </div>
 
         <!-- カスタム placeholder 表示用 -->
-        <div class="date-wrapper">
-            <span class="placeholder" id="placeholder1">タップして日時を入力⇒</span>
-            <input type="datetime-local" id="date1" onfocus="hidePlaceholder('placeholder1')" onblur="showPlaceholder('date1', 'placeholder1')">
-        </div>
+<div class="datetime-wrapper" style="text-align: center;">
+    <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
+    <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+    <span class="datetime-placeholder">タップして日時を入力</span>
+</div>
 
         <div class="highlight-background">
             <span class="highlight-text">第2希望日※必須</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
-        <div class="date-wrapper">
-            <span class="placeholder" id="placeholder2">タップして日時を入力</span>
-            <input type="datetime-local" id="date2" onfocus="hidePlaceholder('placeholder2')" onblur="showPlaceholder('date2', 'placeholder2')">
+        <div class="datetime-wrapper" style="text-align: center;">
+            <span class="placeholder" id="placeholder2">⇩タップして日時を入力⇩</span>
+            <input type="datetime-local" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <span class="datetime-placeholder">タップして日時を入力</span>
         </div>
 
         <div class="label">メッセージ<br>（お身体のお悩みがございましたらご記載ください）</div>
