--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
                 name,
-                phone,
+                phone,Q
                 visitCount,
                 selectedSymptom,
                 irradiationsCount,
