--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <span class="datetime-placeholder">タップして日時を入力</span>
         </div>
 
-        <div class="label">メッセージ<br>（お身体のお悩みがございましたら<br>ご記載ください）</div>
+        <div class="label">メッセージ<br>（お身体のお悩みがございましたらご記載ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <button class="submit-button" onclick="submitForm()">予約を行う</button> <!-- フォーム送信ボタン -->
@@ -350,7 +350,7 @@
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
                 name,
-                phone,Q
+                phone,
                 visitCount,
                 selectedSymptom,
                 irradiationsCount,
