--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
         <div id="Laphos" class="menu-section">
             <label>◆ラフォス&リンパ◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術90分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術120分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術150分</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術90分(所要時間：約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術120分(所要時間：約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術150分(所要時間：約210分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -228,9 +228,9 @@
         <div id="allhands" class="menu-section">
             <label>◆オールハンド◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術60分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術90分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術120分</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術60分(所要時間：約120分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術90分(所要時間：約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術120分(所要時間：約180分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -245,9 +245,9 @@
         <div id="DryHeadSpa" class="menu-section">
             <label>◆ドライヘッドスパ◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ施術75分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">背中ラフォス&ドライヘッドスパ施術120分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ&フェイシャル施術120分</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ施術75分(所要時間：約130分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">背中ラフォス&ドライヘッドスパ施術120分(所要時間：約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ&フェイシャル施術120分(所要時間：180分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -262,9 +262,9 @@
         <div id="custommade" class="menu-section">
             <label>◆オーダーメイドプラン◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術90分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術120分</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術150分</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術90分(所要時間：約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術120分(所要時間：約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術150分(所要時間：210分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -346,7 +346,6 @@ function updateDisplayInfo() {
     const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
     const selectedSymptomText = selectedSymptom.length > 0 ? `・<span style="color:red;"><strong>メニュー</strong></span>：${selectedSymptom.join(', ')}` : '・メニューが未選択です'; // メニューを複数選択可能に
     const irradiationsText = irradiationsCount ? `・<span style="color:red;"><strong>オプション</strong></span>：${irradiationsCount}` : '・オプション無し';
-    const totalAmountText = `・<span style="color:red;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
     const selectedDateText = selectedFullDate ? `・<span style="color:red;"><strong>希望日時</strong></span>：${selectedFullDate}` : '・日時が未選択です'; // 日付が未選択の場合のメッセージを追加
 
     // displayInfo要素に情報を表示
@@ -360,8 +359,6 @@ function updateDisplayInfo() {
         <p>${irradiationsText}</p>
         <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
 }
