--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
         <div id="Laphos" class="menu-section">
             <label>◆ラフォス&リンパ◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術90分(所要時間：約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術120分(所要時間：約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術150分(所要時間：約210分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術90分(所要時間:約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術120分(所要時間:約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ラフォス&リンパ施術150分(所要時間:約210分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -228,9 +228,9 @@
         <div id="allhands" class="menu-section">
             <label>◆オールハンド◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術60分(所要時間：約120分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術90分(所要時間：約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術120分(所要時間：約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術60分(所要時間:約120分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術90分(所要時間:約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オールハンド施術120分(所要時間:約180分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -245,9 +245,9 @@
         <div id="DryHeadSpa" class="menu-section">
             <label>◆ドライヘッドスパ◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ施術75分(所要時間：約130分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">背中ラフォス&ドライヘッドスパ施術120分(所要時間：約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ&フェイシャル施術120分(所要時間：180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ施術75分<br>(所要時間:約130分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">背中ラフォス&ドライヘッドスパ施術120分<br>(所要時間:約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">ドライヘッドスパ&フェイシャル施術120分<br>(所要時間:180分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
@@ -262,9 +262,9 @@
         <div id="custommade" class="menu-section">
             <label>◆オーダーメイドプラン◆</label>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術90分(所要時間：約150分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術120分(所要時間：約180分)</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術150分(所要時間：210分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術90分(所要時間:約150分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術120分(所要時間:約180分)</button>
+                <button type="button" onclick="selectSymptom(this)" data-price="15000">オーダーメイド施術150分(所要時間:210分)</button>
             </div>
             <label>オプション</label>
             <div class="irradiations">
